--- a/src/shared/assets/styles/components/Modal.module.scss
+++ b/src/shared/assets/styles/components/Modal.module.scss
@@ -1,7 +1,7 @@
 @import '../basics';
 
 .modal {
-  z-index: 100;
+  z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
 }
 
 .blur {
-  z-index: 99;
+  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
